--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,5 @@
 # Enable syntax highlighting for files with `.gitattributes` extensions.
 #
-*.gitattributes linguist-language=gitattributes*.al linguist-language=AL
+*.gitattributes linguist-language=gitattributes
 *.al linguist-detectable=true
+*.al linguist-language=AL
